--- a/README
+++ b/README
@@ -1,5 +1,11 @@
-This git is a documents git owned by for Service Dev @ ASD, Beijing	1
-				2
-Please used the build.sh to build all availble projects in this git.
-You can browse the projects documents in index.html directly after
+This git is a documents git owned by for Service Dev @ ASD, Beijing
+
+Please named the project as "NUMBER_PROJECTNAME"(such as: 3_competence)
+in git root folder, or the project will be build in the "index.html"
+summery.
+
+Please used the "build.sh" to build all availble projects in this git.
+
+You can browse the projects documents in "index.html" directly after
 the build work finished.
+
