Add error handling solution  to git
Add error handling solution to git
http://cnbjlx5455/redmine/issues/5193

Change-Id: I8b499cf21cd7a7e8fbeb654f91ab6d53db4f6579

--- a/10_Sony_Select_Service/Documents/Unified_Document/source/2.Design/source/2.ModuleDesign/source/1.ReadMe.rst
+++ b/10_Sony_Select_Service/Documents/Unified_Document/source/2.Design/source/2.ModuleDesign/source/1.ReadMe.rst
@@ -1,3 +1,19 @@
 文档使用说明
 ########################################
+* 文档结构说明
 
+  模块文档分“开发过程中间文档”和"功能模块文档"两部分
+
+* 开发过程中间文档
+
+  对当前系统已存在的功能模块进行更新的文档建议放在这里
+  
+  举例说明：假设当前系统已经支持“新浪微博”和“百度账号”登陆，新feature要求支持"微信账号"登陆，那么"微信账号"登陆相关的文档建议放在这里
+  
+* 功能模块文档
+
+  当前系统已存在的功能模块和feature中新增的功能模块建议放在这里，即”功能模块文档“是完整的模块文档，”开发过程中间文档“只是功能更新的文档
+  
+  一些总结性的模块文档也可以放在这儿
+  
+  例如：”首页Banner模块“、”首页推荐模块“...”错误处理模块“都建议放在这里
