--- a/05_cloud/01_SonySales/changelog.txt
+++ b/05_cloud/01_SonySales/changelog.txt
@@ -6,3 +6,17 @@ update user set updateTime=createTime;
 ///////////////////////////
 
 //////################################################//////
+
+//////###################2014.06.24###################//////
+
+///// DataBase update /////
+DROP TABLE IF EXISTS `blacklist`;
+CREATE TABLE IF NOT EXISTS `blacklist` (
+  `id` bigint(20) NOT NULL AUTO_INCREMENT COMMENT 'Primary key',
+  `userId` bigint(20) NOT NULL COMMENT '用户表id',
+  `createTime` varchar(12) DEFAULT NULL COMMENT '创建时间',
+  PRIMARY KEY (`id`)
+) ENGINE=MyISAM  DEFAULT CHARSET=utf8;
+///////////////////////////
+
+//////################################################//////
